@@ -2,6 +2,8 @@ This file shows a history of changes between PrBoom versions since v2.1.0.
 For historical reference, the complete LxDoom changelog follows it.
 
 Changes from v2.4.5 to v2.4.6
+- Reenabled padding if short or missing reject lumps.
+  Patch #1570517 by RjY.
 - Removed unaligned memory access in r_drawflush.inl. This should fix bus
   errors on architectures where unaligned access is forbidden and should
   give a slight speedup on other architectures.
